--- a/views/multi_choice.html
+++ b/views/multi_choice.html
@@ -4,7 +4,7 @@
 
             <header>
                 <div class="quiz-title">
-                    <img src="check/boot/images/g{{startIndex}}f.png" err-src="http://google.com/favicon.ico"/>
+                    <img src="check/boot/images/g{{flashCard.id}}f.png" err-src="http://google.com/favicon.ico"/>
                 </div>
 
             </header>
@@ -12,14 +12,13 @@
             <div class="challenge" >
 
                 <div class="question">
-                    <h3>{{ flashCards[startIndex][2][0] }}</h3>
-
+                    <h3>{{ flashCard.question }}</h3>
                 </div>
 
-                <div ng-repeat="answer in flashCards[startIndex][3]" class="repeat-wrap">
+                <div ng-repeat="answer in flashCard.answer" class="repeat-wrap">
                     <div class="input-group input-radio">
-                        <input type="radio" name="choice" ng-model="challenge.selected" ng-value="{{ $index }}" id="{{ $index }}">
-                        <label for="{{ $index }}" class="radio-label">{{ answer[1] }}</label>
+                        <input ng-click ="next()" type="radio" name="choice" ng-model="flashCardCorrect" ng-value="answer.false" >
+                        <label for="{{ $index }}" class="radio-label">{{ answer.value }}</label>
                     </div>
                 </div>
 
