--- a/views/ranji_multi.html
+++ b/views/ranji_multi.html
@@ -1,20 +1,20 @@
-<div >
+<div>
     <ul class="unstyled">
-        <li ng-repeat="question in questions">
+        <li>
             <strong class="question">{{ question.questionText }}</strong>
             <ul class="unstyled" id="quest_{{$parent.$index}}">
-        <li ng-repeat="answer in question.answers">
-            <label class="isCorrect_{{answer.selected}}" for="quest_{{$parent.$index}}_answer_{{$index}}">
-                <input ng-click="showResult()" type="radio" id="quest_{{$parent.$index}}_answer_{{$index}}"
-                       ng-model="answers[$parent.$index]" value="{{ answer.answerText }}"  name="quest_{{$parent.$index}}_answers" />{{ answer.answerText }}</label>
+                <li ng-repeat="answer in question.answers">
+                    <label id ="labelId{{$index}}" class="isCorrect_{{answer.selected}}" for="quest_{{$parent.$index}}_answer_{{$index}}">
+                        <input ng-click="showResult()" type="radio" id="quest_{{$parent.$index}}_answer_{{$index}}"
+                               ng-model="answers[0]" value="{{ answer.answerText }}"
+                               name="quest_{{$parent.$index}}_answers"/>{{ answer.answerText }}</label>
+                </li>
+            </ul>
         </li>
-    </ul>
-    </li>
     </ul>
     <button class="btn" type="submit" ng:click="showResult()">Submit</button>
     <div class="well">
         <p>you got {{ correctCount }} out of {{questions.length}} right</p>
 
     </div>
-
 </div>
