--- a/views/trainer.html
+++ b/views/trainer.html
@@ -1,7 +1,7 @@
 
-<div class="container" ng-controller="AboutController">
+<div class="container" ng-controller="SimpleTrainerController">
     <normal-flash-card></normal-flash-card>
 </div>
-<div class="container" ng-controller="QuizController">
+<div class="container" ng-controller="MultiChoiceTrainerController">
     <multi-choice-flash-card></multi-choice-flash-card>
 </div>
